--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Gabriel Rech # Website name
+title: Gabriel E. Rech # Website name
 baseURL: 'https://rechgabriel.netlify.app/' # Website URL
 
 ############################
